[gd_scene load_steps=18 format=3 uid="uid://clatdp5v1hhgu"]

[ext_resource type="Script" path="res://hud.gd" id="1_p3t1j"]
[ext_resource type="FontFile" uid="uid://csj2576lnkq5u" path="res://diffusion-bold.ttf" id="2_3g7x8"]
[ext_resource type="FontFile" uid="uid://b5makws46fq6m" path="res://PeaberryBase.ttf" id="2_6o2gr"]
[ext_resource type="PackedScene" uid="uid://dxb2pg5g185kj" path="res://cell_scene.tscn" id="4_ibeh7"]
[ext_resource type="Texture2D" uid="uid://3hxa0af6kl31" path="res://baby-face.png" id="5_p1656"]
[ext_resource type="Texture2D" uid="uid://df5214pdb5nj7" path="res://emote_sleeps.png" id="6_5ym78"]
[ext_resource type="Texture2D" uid="uid://cs1i84rpoa8v8" path="res://emote_idea.png" id="6_ia5l7"]
[ext_resource type="Texture2D" uid="uid://3n6vg3bk2v5g" path="res://emote_dots1.png" id="6_rg47d"]
[ext_resource type="Texture2D" uid="uid://1fd7xkvpos7l" path="res://emote_dots2.png" id="7_lmonm"]
[ext_resource type="Texture2D" uid="uid://bin2qfrdi52eh" path="res://emote_dots3.png" id="8_m7pnl"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_gvf8i"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_n58mq"]
bg_color = Color(0.945098, 0.4, 0.494118, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_cscfu"]
bg_color = Color(0.529412, 0.65098, 0.984314, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_mnm0c"]
content_margin_left = 20.0
content_margin_top = 20.0
content_margin_right = 20.0
content_margin_bottom = 20.0
bg_color = Color(0.490196, 0.666667, 0.988235, 1)
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color(0, 0, 0, 1)
border_blend = true
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_fh6er"]
bg_color = Color(0.305882, 0.286275, 0.282353, 1)
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color(0, 0, 0, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8
expand_margin_left = 10.0
expand_margin_top = 10.0
expand_margin_right = 10.0
expand_margin_bottom = 10.0

[sub_resource type="Theme" id="Theme_ehxht"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_3tkk1"]
bg_color = Color(0.6, 0.6, 0.6, 0.482353)

[node name="HUD" type="CanvasLayer"]
script = ExtResource("1_p3t1j")
cell_scene = ExtResource("4_ibeh7")

[node name="timebar" type="ProgressBar" parent="."]
offset_right = 320.0
offset_bottom = 57.0
theme_override_styles/fill = SubResource("StyleBoxFlat_gvf8i")
max_value = 6.0
step = 1.0
value = 1.0
show_percentage = false

[node name="time" type="Label" parent="."]
offset_right = 40.0
offset_bottom = 23.0
rotation = -0.000331425
tooltip_text = "Race against time (Week 24 deadline)"
mouse_filter = 1
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 40
text = "Week 4"

[node name="alertbar" type="ProgressBar" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -160.0
offset_right = 160.0
offset_bottom = 57.0
grow_horizontal = 2
theme_override_styles/fill = SubResource("StyleBoxFlat_n58mq")
max_value = 11.0
step = 1.0
value = 1.0
show_percentage = false

[node name="alert" type="Label" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -200.0
offset_right = 200.0
offset_bottom = 91.0
grow_horizontal = 2
tooltip_text = "Warn dad of danger (10 = win)"
mouse_filter = 1
theme_override_colors/font_color = Color(0.827451, 0, 0, 1)
theme_override_font_sizes/font_size = 40
text = "Alert Level: 0"
horizontal_alignment = 1

[node name="energybar" type="ProgressBar" parent="."]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -320.0
offset_bottom = 57.0
grow_horizontal = 0
theme_override_styles/fill = SubResource("StyleBoxFlat_cscfu")
max_value = 10.0
step = 1.0
value = 10.0
show_percentage = false

[node name="energy" type="Label" parent="."]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -328.0
offset_bottom = 91.0
grow_horizontal = 0
tooltip_text = "Baby gets tired"
mouse_filter = 1
theme_override_colors/font_color = Color(0, 0, 1, 1)
theme_override_font_sizes/font_size = 40
text = "Energy 1/1"
horizontal_alignment = 2

[node name="childbox" type="PanelContainer" parent="."]
anchors_preset = -1
anchor_left = 0.0322917
anchor_top = 0.308333
anchor_right = 0.0895834
anchor_bottom = 0.347917
offset_left = 135.0
offset_top = -23.9996
offset_right = 210.0
offset_bottom = 2.00045
size_flags_horizontal = 0
size_flags_vertical = 0
tooltip_text = "Babbling, best trying your best"
theme_override_styles/panel = SubResource("StyleBoxFlat_mnm0c")
metadata/_edit_use_anchors_ = true

[node name="childdialogue" type="Label" parent="childbox"]
layout_mode = 2
size_flags_vertical = 1
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_6o2gr")
theme_override_font_sizes/font_size = 40
text = "......"

[node name="parentbox" type="PanelContainer" parent="."]
offset_left = 448.0
offset_top = 221.0
offset_right = 818.0
offset_bottom = 282.0
grow_vertical = 0
tooltip_text = "If only dad would understand"
theme_override_styles/panel = SubResource("StyleBoxFlat_fh6er")

[node name="parentdialogue" type="Label" parent="parentbox"]
custom_minimum_size = Vector2(350, 2.08165e-12)
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 0, 1)
theme_override_fonts/font = ExtResource("2_3g7x8")
theme_override_font_sizes/font_size = 30
text = "Who's a cutie pie?"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="Label" type="Label" parent="."]
offset_left = 13.0
offset_top = 998.0
offset_right = 950.0
offset_bottom = 1027.0
tooltip_text = "This the hand you are dealt"
mouse_filter = 1
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_6o2gr")
theme_override_font_sizes/font_size = 25
text = "Babble Out_________________________________________________"

[node name="checkoptions" type="Button" parent="."]
offset_left = 810.0
offset_top = 1375.0
offset_right = 940.0
offset_bottom = 1418.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 25
text = "  Toybox   "

[node name="checklog" type="Button" parent="."]
offset_left = 21.0
offset_top = 1376.0
offset_right = 188.0
offset_bottom = 1419.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 25
text = "MemoryLane"

[node name="popupmenu" type="PopupMenu" parent="."]
position = Vector2i(750, 1270)
size = Vector2i(300, 120)

[node name="accountselect" type="OptionButton" parent="popupmenu"]
offset_right = 14.0
offset_bottom = 20.0
theme_override_font_sizes/font_size = 22
item_count = 2
selected = 0
fit_to_longest_item = false
popup/item_0/text = "Account1"
popup/item_0/id = 0
popup/item_1/text = "Account2"
popup/item_1/id = 1

[node name="modelselect" type="OptionButton" parent="popupmenu"]
offset_left = 150.0
offset_right = 269.0
offset_bottom = 31.0
theme_override_font_sizes/font_size = 22
item_count = 3
selected = 0
popup/item_0/text = "2.5-lite"
popup/item_0/id = 0
popup/item_1/text = "2.5"
popup/item_1/id = 1
popup/item_2/text = "3-preview"
popup/item_2/id = 2

[node name="scoreset" type="HSlider" parent="popupmenu"]
offset_left = 20.0
offset_top = 35.0
offset_right = 220.0
offset_bottom = 85.0
max_value = 15.0
value = 10.0
tick_count = 16
ticks_on_borders = true

[node name="timeset" type="HSlider" parent="popupmenu"]
offset_left = 20.0
offset_top = 70.0
offset_right = 220.0
offset_bottom = 120.0
max_value = 5.0
value = 3.0
tick_count = 6
ticks_on_borders = true

[node name="popuplog" type="Popup" parent="."]
title = "Log"
size = Vector2i(800, 900)
max_size = Vector2i(16384, 900)

[node name="popupscroll" type="ScrollContainer" parent="popuplog"]
offset_right = 800.0
offset_bottom = 900.0

[node name="popupmargin" type="MarginContainer" parent="popuplog/popupscroll"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="tablegrid" type="GridContainer" parent="popuplog/popupscroll/popupmargin"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
columns = 3

[node name="popuptext" type="Label" parent="popuplog/popupscroll/popupmargin/tablegrid"]
visible = false
layout_mode = 2
theme = SubResource("Theme_ehxht")
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 15
theme_override_styles/normal = SubResource("StyleBoxFlat_3tkk1")
autowrap_mode = 2

[node name="face" type="Sprite2D" parent="."]
position = Vector2(483, 1299)
scale = Vector2(0.580078, 0.507812)
texture = ExtResource("5_p1656")

[node name="emote_idea" type="Sprite2D" parent="."]
visible = false
position = Vector2(667, 1250)
scale = Vector2(3, 3)
texture = ExtResource("6_ia5l7")
flip_h = true

[node name="emote_sleep" type="Sprite2D" parent="."]
visible = false
position = Vector2(290, 1250)
scale = Vector2(3, 3)
texture = ExtResource("6_5ym78")

[node name="emote_think1" type="Sprite2D" parent="."]
visible = false
position = Vector2(667, 1250)
scale = Vector2(3, 3)
texture = ExtResource("6_rg47d")
flip_h = true

[node name="emote_think2" type="Sprite2D" parent="."]
visible = false
position = Vector2(667, 1250)
scale = Vector2(3, 3)
texture = ExtResource("7_lmonm")
flip_h = true

[node name="emote_think3" type="Sprite2D" parent="."]
visible = false
position = Vector2(667, 1250)
scale = Vector2(3, 3)
texture = ExtResource("8_m7pnl")
flip_h = true

[connection signal="pressed" from="checkoptions" to="." method="_on_checkoptions_pressed"]
[connection signal="pressed" from="checklog" to="." method="_on_checklog_pressed"]
[connection signal="item_selected" from="popupmenu/accountselect" to="." method="_on_accountselect_item_selected"]
[connection signal="item_selected" from="popupmenu/modelselect" to="." method="_on_modelselect_item_selected"]
[connection signal="value_changed" from="popupmenu/scoreset" to="." method="_on_scoreset_value_changed"]
[connection signal="value_changed" from="popupmenu/timeset" to="." method="_on_timeset_value_changed"]
